# unreal-mcp

./: .gitignore  mcp.json
Docs/: Architecture.md  BlueprintCoverage.md  Contributing.md  README.md  ROADMAP.md  TechStack.md  Testing.md  VersionCompatibility.md
Docs/Tools/: node_tools.md
MCPGameProject/Plugins/UnrealMCP/: UnrealMCP.uplugin
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/: UnrealMCPBridge.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/Commands/: UnrealMCPCommonUtils.cpp  UnrealMCPUMGCommands.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Public/: UnrealMCPBridge.h
Python/: pyproject.toml  unreal_mcp_server.py  version_config.py
Python/config/: default.json  ue5.3.json  ue5.4.json  ue5.5.json  ue5.7.json
Python/tests/: conftest.py  smoke_test.py  test_client.py  test_version_config.py
Python/tests/integration/: test_actors.py  test_blueprints.py
Python/tools/: blueprint_tools.py  editor_tools.py  node_tools.py  project_tools.py  umg_tools.py
UE5/MCPHost/: MCPHost.uproject
UE5/MCPHost/Config/: DefaultEngine.ini  DefaultGame.ini
UE5/MCPHost/Plugins/UnrealMCP/: UnrealMCP.uplugin
UE5/MCPHost/Plugins/UnrealMCP/Source/UnrealMCP/: UnrealMCP.Build.cs
UE5/MCPHost/Plugins/UnrealMCP/Source/UnrealMCP/Private/: MCPServerRunnable.cpp  UnrealMCPBridge.cpp  UnrealMCPModule.cpp
UE5/MCPHost/Plugins/UnrealMCP/Source/UnrealMCP/Private/Commands/: UnrealMCPBlueprintCommands.cpp  UnrealMCPBlueprintNodeCommands.cpp  (+1 more)
UE5/MCPHost/Plugins/UnrealMCP/Source/UnrealMCP/Public/: UnrealMCPModule.h
(+3 files in other folders)
